Configure the project for uploading pypi

--- a/.gitignore
+++ b/.gitignore
@@ -94,8 +94,8 @@ thuvienlaso/*imgbackend
 
 .vscode
 tags
-/.vs/lasotuvi/v14/.suo
-/lasotuvi.pyproj
+/.vs/ansaotuvi/v14/.suo
+/ansaotuvi.pyproj
 
 
 *.sublime-*
